--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
         "production": "mix --production --mix-config=webpack.ssr.mix.js && mix --production"
     },
     "devDependencies": {
-        "@inertiajs/inertia": "^0.11.0",
-        "@inertiajs/inertia-vue3": "^0.6.0",
-        "@inertiajs/progress": "^0.2.7",
+        "@inertiajs/inertia": "^0.10.0",
+        "@inertiajs/inertia-vue3": "^0.5.1",
+        "@inertiajs/progress": "^0.2.6",
         "@inertiajs/server": "^0.1.0",
+        "@popperjs/core": "^2.5.3",
         "@tailwindcss/forms": "^0.5.0",
-        "@vue/compiler-sfc": "^3.2.31",
+        "@vue/compiler-sfc": "^3.0.5",
         "@vue/server-renderer": "^3.2.31",
+        "alpinejs": "^3.2.6",
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
+        "bootstrap": "^5.1.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "postcss-import": "^14.0.2",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.49.11",
+        "sass-loader": "^12.1.0",
         "tailwindcss": "^3.0.18",
-        "vue": "^3.2.31",
-        "vue-loader": "^17.0.0",
+        "vue": "^3.0.5",
+        "vue-loader": "^16.1.2",
         "webpack-node-externals": "^3.0.0"
     }
 }
