--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=6a120f8c7c9396129353f650780b4187",
+    "/css/app.css": "/css/app.css?id=b4044c2d40e5fc7b16cbe7879b001a34"
 }
